--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 DEBUG=true
-SECRET_KEY="5(15ik6z=e%jcqiz_235dfc53*_$Dj8956ds+i2+%5wszg)r-z!&!yer+ga9m2--b2d"
+SECRET_KEY="這是你的secret_key, Change to your SECRET_KEY"
 DB_NAME=my_db
 DB_USER=postgres
 DB_PASS=postgres
