--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Django==1.11a1
-djangorestframework==3.5.4
-gunicorn==19.6.0
-psycopg2==2.6
-redis==2.10.5
+Django>=1.11
+djangorestframework>=3.6
+gunicorn>=19.7
+psycopg2>=2.7
+redis>=2.10
 djgunicorn
 markdown
 django-filter
